--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ body {
     background-color: white;
     color: black;
     border-radius: 20px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .main-section {
